fix: h2 gap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -292,8 +292,11 @@ section h2{
 
 .analysis-container h2 {
     font-size: 1.8rem;
-    margin-bottom: 1.5rem;
-    border-bottom: 2px solid var(--color-text);
+}
+
+.analysis-container hr {
+    margin: .4rem 0 1.5rem;
+    color: var(--color-text);
 }
 
 .analysis-container h3 {
